# invenio-notifications

./: CHANGES.rst  MANIFEST.in  run-tests.sh  setup.cfg
.github/workflows/: tests.yml
invenio_notifications/: __init__.py  config.py  errors.py  events.py  ext.py  manager.py  models.py  registry.py  tasks.py  views.py
invenio_notifications/backends/: __init__.py  backend.py  base.py  email.py
invenio_notifications/backends/email/: __init__.py  backend.py
invenio_notifications/backends/utils/: loaders.py
invenio_notifications/services/: builders.py  filters.py  generators.py  uow.py
invenio_notifications/translations/: messages.pot
invenio_notifications/translations/zh-Hant/LC_MESSAGES/: messages.po
invenio_notifications/views/: __init__.py  ui.py
tests/: conftest.py  test_invenio_notifications.py
