# -*- coding: utf-8 -*-
#
# Copyright (C) 2023 CERN.
# Copyright (C) 2023 Graz University of Technology.
#
# Invenio-Notifications is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = invenio-notifications
version = attr: invenio_notifications.__version__
description = "Invenio module for notifications support."
long_description = file: README.rst, CHANGES.rst
keywords = invenio TODO
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-notifications
classifiers =
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-base>=1.2.5
    invenio-i18n>=1.3.1

[options.extras_require]
tests =
    invenio-app>=1.3.4,<2.0.0
    invenio-celery>=1.2.5
    invenio-mail>=1.0.2
    pytest-invenio>=2.1.0,<3.0.0
    pytest-black>=0.3.0
    sphinx>=4.5.0

[options.entry_points]
invenio_base.apps =
    invenio_notifications = invenio_notifications:InvenioNotifications
invenio_base.api_apps =
    invenio_notifications = invenio_notifications:InvenioNotifications
invenio_base.api_blueprints =
    invenio_notifications = invenio_notifications.views:create_blueprint
invenio_i18n.translations =
    messages = invenio_notifications
# TODO: Investigate how tasks will be used
# invenio_celery.tasks =

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_notifications --cov-report=term-missing
testpaths = docs tests invenio_notifications

[compile_catalog]
directory = invenio_notifications/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_notifications/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_notifications/translations/messages.pot
output-dir = invenio_notifications/translations/

[update_catalog]
input-file = invenio_notifications/translations/messages.pot
output-dir = invenio_notifications/translations/
